tests/lime/pass/bugs/args/jmp_macro.wsa
    push 1
    jmp macro hello [push 2] .hello
    hello
.hello:
