tests/lime/fail/tokens/label_rest/byte_35.wsa
jmp .l# .l#: push 35
